# wims

./: .gitignore  README.md  Readme.md  app.py  docker-compose.yml  flake.nix  flow.drawio  package-lock.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  rest.client.requests.http  testing.mqtt
.devcontainer/mongodb/: init-mongo-db-with-items.js
.devcontainer/mqtt/mosquitto-conf/: mosquitto.conf  passwd
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  playwright.yml  test-integration.yaml
backend/: .gitignore  Dockerfile  pyproject.toml  rest.client.requests.http
backend/schemas/: config_schema.json  llm_schema.json
backend/src/: config.dist.yml  config.yml  database_connector.py  main.py  mqtt_client.py  utils.py  websocket.py
backend/src/db/: db_categories.py  db_item_lists.py  db_items.py  db_queries.py  db_users.py
backend/src/dependencies/: backend_service.py  config.py
backend/src/models/: database.py  requests.py
backend/src/modules/: camera.py  category_importer.py  chatgpt.py  unspsc_importer.py
backend/src/routers/: backup.py  camera.py  categories.py  completion.py  config.py  healthz.py  items.py  metrics.py  openapi.py  queries.py  readers.py  scan.py  stream.py  users.py  utils.py
backend/src/routers/items/: get_items.py  items.py
backend/src/unspsc_importer/: __init__.py
backend/test/: conftest.py  test_main.py
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  configmap-mongodb-init.yaml  deployment-backend.yaml  deployment-frontend.yaml  deployment-mongodb.yaml  ingress-http.yaml  service-backend.yaml  service-frontend.yaml  service-mongodb.yaml
cli/: README.md  cli.py  pyproject.toml
cli/categories/: commands.py
cli/items/: commands.py
cli/readers/: commands.py
cli/src/: items.py  scanner.py  users.py
cli/usb_reader/: commands.py
cli/users/: commands.py
docker/: config.default.yml  config.dist.yml  mongo_init.js  nginx.conf
docker/data/: categories.json
docker/mosquitto-conf/: mosquitto.conf  passwd
frontend/: Dockerfile  app.py  pyproject.toml
frontend/src/: app.py  app_config.py  modules.py
frontend/src/models/: database.py  forms.py
frontend/src/templates/: base.html  header.html  index.html  item.html  menu.html
frontend/src/templates/js/: base.js
frontend/templates/: index.html
hardware/: README.md
hardware/esphome/: .gitignore  common.yaml  example_reader.yaml  example_secrets.yaml  firmware.yaml  reader.dist.yaml  reader.yaml  reader_common.yaml
hardware/photobox/: pyproject.toml
hardware/photobox/src/: photobox.py
hardware/usb-reader/: platformio.ini
hardware/usb-reader/src/: main.cpp
integration/: Dockerfile  config.backend.test.yml  docker-compose.tests.yml  package-lock.json  package.json  playwright.config.ts  start-services.sh
integration/helpers/: sse_subscription.ts
integration/helpers/fields/: test.field.helper.ts
integration/tests/: contrast.spec.ts  item-view.spec.ts  root-view.spec.ts  theme-and-layout.spec.ts
mongodb-docker-entrypoint-initdb.d/: a_setup_database.js
templates/: actor.html
vue_frontend/: .env  .env.development  .env.production  Dockerfile  README.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
vue_frontend/src/: App.vue  font-awesome.ts  main.ts  utils.ts  vite-env.d.ts
vue_frontend/src/assets/: _bootstrap-variables.scss  base.css  main.css
vue_frontend/src/components/: CameraSettings.vue  FooterComponent.vue  HelloWorld.vue  Item.vue  ItemComparison.vue  ItemForm.vue  ItemList.vue  ItemListContainer.vue  ItemsFormList.vue  LLMCompletion.vue  NFCReader.vue  QRReader.vue  SearchComponent.vue  SearchModal.vue  TitleComponent.vue
vue_frontend/src/components/fields/: ArrayField.vue  CheckboxField.vue  ImageThumbnailField.vue  ItemField.vue  LoadingField.vue  ModalField.vue  NumberField.vue  ObjectField.vue  SearchInput.vue  TextAreaField.vue  TextField.vue
vue_frontend/src/components/shared/: CategoryTreeView.vue  ContainerListComponent.vue  ImageModal.vue  QueryEditor.vue  SearchComponent.vue  SearchModal.vue
vue_frontend/src/components/shared/ListComponent/: ListCardComponent.vue  ListItemComponent.vue
vue_frontend/src/interfaces/: EventAction.ts  FormField.interface.ts  FormField.ts  api-types.ts  items.interface.ts  queries.ts  reader.interface.ts
vue_frontend/src/router/: index.ts
vue_frontend/src/services/: NFCService.ts  ScanService.ts
vue_frontend/src/stores/: clientStore.ts  eventBus.ts  serverStream.ts  themeStore.ts
vue_frontend/src/utils/: form.helper.ts
vue_frontend/src/views/: AboutView.vue  CategoriesView.vue  CategoryView.vue  HomeView.vue  ImportView.vue  ItemView.vue  ProfileView.vue  ReaderView.vue  SearchView.vue  UsersView.vue
