[project]
authors = [{name = "EeveesEyes"}]
description = ""
name = "backend"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
license = {text = "GPL-3.0-or-later"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
package-mode = false
packages = [{include = "frontend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
openai = "^2.7.2"
paho-mqtt = "^2.1.0"
pydantic = "^2.12.4"
pymongo = "^4.15.3"
python-multipart = "^0.0.20"
sse-starlette = "^3.0.3"
uvicorn = "^0.38.0"
wtforms = "^3.2.1"
jsonschema = "^4.25.1"
pyyaml = "^6.0.3"
loguru = "^0.7.3"
fastapi-utils = "^0.8.0"
deepmerge = "^2.0"
opencv-python = "^4.12.0.88"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "SIM", "I", "UP", "B"]
