[project]
authors = [{name = "EeveesEyes"}]
dependencies = [
  "deepmerge>=2.0",
  "fastapi>=0.122.0",
  "fastapi-utils>=0.8.0",
  "jsonschema>=4.25.1",
  "loguru>=0.7.3",
  "openai>=2.8.1",
  "openpyxl>=3.1.5",
  "paho-mqtt>=2.1.0",
  "prometheus-client>=0.24.1",
  "pydantic>=2.12.5",
  "pymongo>=4.15.4",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.3",
  "requests>=2.32.5",
  "sse-starlette>=3.0.3",
  "uvicorn>=0.38.0",
  "wtforms>=3.2.1",
]
description = ""
license = {text = "GPL-3.0-or-later"}
name = "backend"
readme = "README.md"
requires-python = "==3.14.*"
version = "0.1.0"

[dependency-groups]
dev = ["pytest", "taskipy", "ruff"]

[tool.taskipy.tasks]
format = "ruff format src"
lf = "ruff check src --fix && ruff format src"
lint = "ruff check src --fix"
type-check = "ruff check src --select I"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "SIM", "I", "UP", "B"]
