[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [{ name = "EeveesEyes", email = "a@kailus.dev" }]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "frontend" }]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
bootstrap-flask = "^2.4.1"
flask_wtf = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
ruff = "^0.8.6"
